[package]
name = "minesweeper"
version = "0.1.0"
edition = "2024"

[features]
default = []
debug = ["board_plugin/debug", "bevy-inspector-egui"]

[dependencies]
bevy = "0.16.1"
bevy_egui = "0.35.1"
board_plugin = { path = "board_plugin" }

bevy-inspector-egui = { version = "0.32.0", optional = true }

[workspace]
members = [
    "board_plugin",
]
