[package]
name = "board_plugin"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug = ["colored", "bevy-inspector-egui"]

[dependencies]
bevy = "0.14.0"
rand = "0.8.5"
serde = "1.0.203"
bevy-inspector-egui = { version = "0.25.0", optional = true }
colored = { version = "2.1.0", optional = true }